# PROYECTO

./: Codigo del reloj y link donde se im.txt
Codigo ESP/BLE_WIFI/: CMakeLists.txt  sdkconfig  sdkconfig.old
Codigo ESP/BLE_WIFI/codigo/: launch.json  settings.json
Codigo ESP/BLE_WIFI/main/: CMakeLists.txt  app_main.c  buzzer_driver.c  buzzer_driver.h  nextion_driver.c  nextion_driver.h  notas.txt  ntp_func.c  ntp_func.h  wifi_provisioning.c  wifi_provisioning.h
Codigo ESP/BLE_WIFI/main/medication/: medication_dispenser.c  medication_dispenser.h  medication_hardware.c  medication_hardware.h  medication_storage.c  medication_storage.h
Codigo ESP/BLE_WIFI/main/mqtt/: mqtt_app.c  mqtt_app.h  mqtt_connection.c  mqtt_connection.h  mqtt_manager_config.h  mqtt_publication.c  mqtt_publication.h  mqtt_subscription.c  mqtt_subscription.h
